--- a/index.html
+++ b/index.html
@@ -6,46 +6,49 @@
     html, body {
       margin: 0;
       padding: 0;
-      height: 100vh;
+      height: 100%;
       background: #000;
       color: white;
       font-family: sans-serif;
-      overflow: hidden;
+      overflow: hidden; /* Prevent scrolling */
     }
 
     body {
       display: flex;
-      justify-content: center;
       align-items: center;
+      justify-content: center;
     }
 
     .game-wrapper {
       display: flex;
       flex-direction: column;
       align-items: center;
-      max-height: 100%;
+      justify-content: center;
+      width: 100vw;
+      height: 100vh;
+      box-sizing: border-box;
     }
 
     canvas {
       background-color: white;
       border: 2px solid white;
-      width: 85vmin;
-      height: 85vmin;
+      width: 80vmin;
+      height: 80vmin;
       max-width: 400px;
       max-height: 400px;
       touch-action: none;
     }
 
     #scoreBoard {
-      font-size: 20px;
-      margin: 10px 0 5px;
+      font-size: 18px;
+      margin-top: 10px;
       text-align: center;
     }
 
     #startBtn {
       margin-top: 10px;
       padding: 10px 20px;
-      font-size: 18px;
+      font-size: 16px;
       background: #ff4081;
       color: white;
       border: none;
@@ -55,7 +58,7 @@
 
     #gameOver {
       color: red;
-      font-size: 24px;
+      font-size: 22px;
       display: none;
       margin-top: 10px;
     }
@@ -69,8 +72,8 @@
     }
 
     #mobileControls button.arrow {
-      padding: 10px 18px;
-      font-size: 24px;
+      padding: 8px 16px;
+      font-size: 20px;
       background: #ff4081;
       color: white;
       border: none;
@@ -92,253 +95,253 @@
   </style>
 </head>
 <body>
+  <div class="game-wrapper">
+    <canvas id="game" width="400" height="400"></canvas>
+    <div id="scoreBoard">Score: 0 | Level: 1</div>
+    <div id="gameOver">Game Over</div>
+    <button id="startBtn">Start Game</button>
 
-<div class="game-wrapper">
-  <canvas id="game" width="400" height="400"></canvas>
-  <div id="scoreBoard">Score: 0 | Level: 1</div>
-  <div id="gameOver">Game Over</div>
-  <button id="startBtn">Start Game</button>
-
-  <div id="mobileControls">
-    <button class="arrow" data-dir="up">↑</button>
-    <div>
-      <button class="arrow" data-dir="left">←</button>
-      <button class="arrow" data-dir="down">↓</button>
-      <button class="arrow" data-dir="right">→</button>
+    <div id="mobileControls">
+      <button class="arrow" data-dir="up">↑</button>
+      <div>
+        <button class="arrow" data-dir="left">←</button>
+        <button class="arrow" data-dir="down">↓</button>
+        <button class="arrow" data-dir="right">→</button>
+      </div>
     </div>
   </div>
-</div>
 
-<script>
-const canvas = document.getElementById('game');
-const ctx = canvas.getContext('2d');
-const scoreBoard = document.getElementById('scoreBoard');
-const gameOverMsg = document.getElementById('gameOver');
-const startBtn = document.getElementById('startBtn');
+  <script>
+    const canvas = document.getElementById('game');
+    const ctx = canvas.getContext('2d');
+    const scoreBoard = document.getElementById('scoreBoard');
+    const gameOverMsg = document.getElementById('gameOver');
+    const startBtn = document.getElementById('startBtn');
 
-let grid = 20;
-let count = 0;
-let snake;
-let donut;
-let score = 0;
-let level = 1;
-let speed = 8;
-let animationFrame;
+    let grid = 20;
+    let count = 0;
+    let snake;
+    let donut;
+    let score = 0;
+    let level = 1;
+    let speed = 8;
+    let animationFrame;
 
-const colors = ['#FF0000', '#FF8800', '#FFD700', '#00CC00', '#00BFFF', '#BA55D3'];
+    const colors = ['#FF0000', '#FF8800', '#FFD700', '#00CC00', '#00BFFF', '#BA55D3'];
 
-function resetGame() {
-  snake = {
-    x: 160,
-    y: 160,
-    dx: grid,
-    dy: 0,
-    cells: [],
-    maxCells: 4,
-    color: colors[0]
-  };
+    function resetGame() {
+      snake = {
+        x: 160,
+        y: 160,
+        dx: grid,
+        dy: 0,
+        cells: [],
+        maxCells: 4,
+        color: colors[0]
+      };
 
-  donut = {
-    x: getRandomInt(0, 20) * grid,
-    y: getRandomInt(0, 20) * grid
-  };
+      donut = {
+        x: getRandomInt(0, 20) * grid,
+        y: getRandomInt(0, 20) * grid
+      };
 
-  score = 0;
-  level = 1;
-  speed = 8;
-  count = 0;
-  gameOverMsg.style.display = 'none';
-  updateScore();
-}
-
-function getRandomInt(min, max) {
-  return Math.floor(Math.random() * (max - min)) + min;
-}
-
-function updateScore() {
-  scoreBoard.textContent = `Score: ${score} | Level: ${level}`;
-}
-
-function drawSnakeHead(x, y) {
-  ctx.fillStyle = snake.color;
-  ctx.beginPath();
-  ctx.arc(x + grid / 2, y + grid / 2, grid / 2 - 1, 0, Math.PI * 2);
-  ctx.fill();
-
-  ctx.fillStyle = 'white';
-  ctx.beginPath();
-  ctx.arc(x + 5, y + 6, 2, 0, Math.PI * 2);
-  ctx.arc(x + 13, y + 6, 2, 0, Math.PI * 2);
-  ctx.fill();
-
-  ctx.fillStyle = 'black';
-  ctx.beginPath();
-  ctx.arc(x + 5, y + 6, 1, 0, Math.PI * 2);
-  ctx.arc(x + 13, y + 6, 1, 0, Math.PI * 2);
-  ctx.fill();
-
-  ctx.strokeStyle = 'pink';
-  ctx.beginPath();
-  ctx.moveTo(x + 10, y + 15);
-  ctx.lineTo(x + 10, y + 20);
-  ctx.stroke();
-}
-
-function drawDonut(x, y) {
-  ctx.fillStyle = '#f4a460';
-  ctx.beginPath();
-  ctx.arc(x + grid / 2, y + grid / 2, grid / 2 - 1, 0, Math.PI * 2);
-  ctx.fill();
-
-  ctx.fillStyle = 'white';
-  ctx.beginPath();
-  ctx.arc(x + grid / 2, y + grid / 2, 4, 0, Math.PI * 2);
-  ctx.fill();
-}
-
-function loop() {
-  animationFrame = requestAnimationFrame(loop);
-  if (++count < (15 - speed)) return;
-  count = 0;
-
-  ctx.clearRect(0, 0, canvas.width, canvas.height);
-
-  snake.x += snake.dx;
-  snake.y += snake.dy;
-
-  if (snake.x < 0) snake.x = canvas.width - grid;
-  else if (snake.x >= canvas.width) snake.x = 0;
-  if (snake.y < 0) snake.y = canvas.height - grid;
-  else if (snake.y >= canvas.height) snake.y = 0;
-
-  snake.cells.unshift({ x: snake.x, y: snake.y });
-  if (snake.cells.length > snake.maxCells) snake.cells.pop();
-
-  drawDonut(donut.x, donut.y);
-
-  snake.cells.forEach((cell, index) => {
-    if (index === 0) {
-      drawSnakeHead(cell.x, cell.y);
-    } else {
-      ctx.fillStyle = snake.color;
-      ctx.fillRect(cell.x, cell.y, grid - 1, grid - 1);
-    }
-
-    if (cell.x === donut.x && cell.y === donut.y) {
-      snake.maxCells++;
-      score++;
-      donut.x = getRandomInt(0, 20) * grid;
-      donut.y = getRandomInt(0, 20) * grid;
-
-      if (score % 5 === 0) {
-        level++;
-        speed = Math.min(speed + 1, 14);
-        snake.color = colors[level % colors.length];
-      }
-
+      score = 0;
+      level = 1;
+      speed = 8;
+      count = 0;
+      gameOverMsg.style.display = 'none';
       updateScore();
     }
 
-    for (let i = index + 1; i < snake.cells.length; i++) {
-      if (cell.x === snake.cells[i].x && cell.y === snake.cells[i].y) {
-        cancelAnimationFrame(animationFrame);
-        gameOverMsg.style.display = 'block';
-        startBtn.style.display = 'inline-block';
+    function getRandomInt(min, max) {
+      return Math.floor(Math.random() * (max - min)) + min;
+    }
+
+    function updateScore() {
+      scoreBoard.textContent = `Score: ${score} | Level: ${level}`;
+    }
+
+    function drawSnakeHead(x, y) {
+      ctx.fillStyle = snake.color;
+      ctx.beginPath();
+      ctx.arc(x + grid / 2, y + grid / 2, grid / 2 - 1, 0, Math.PI * 2);
+      ctx.fill();
+
+      ctx.fillStyle = 'white';
+      ctx.beginPath();
+      ctx.arc(x + 5, y + 6, 2, 0, Math.PI * 2);
+      ctx.arc(x + 13, y + 6, 2, 0, Math.PI * 2);
+      ctx.fill();
+
+      ctx.fillStyle = 'black';
+      ctx.beginPath();
+      ctx.arc(x + 5, y + 6, 1, 0, Math.PI * 2);
+      ctx.arc(x + 13, y + 6, 1, 0, Math.PI * 2);
+      ctx.fill();
+
+      ctx.strokeStyle = 'pink';
+      ctx.beginPath();
+      ctx.moveTo(x + 10, y + 15);
+      ctx.lineTo(x + 10, y + 20);
+      ctx.stroke();
+    }
+
+    function drawDonut(x, y) {
+      ctx.fillStyle = '#f4a460';
+      ctx.beginPath();
+      ctx.arc(x + grid / 2, y + grid / 2, grid / 2 - 1, 0, Math.PI * 2);
+      ctx.fill();
+
+      ctx.fillStyle = 'white';
+      ctx.beginPath();
+      ctx.arc(x + grid / 2, y + grid / 2, 4, 0, Math.PI * 2);
+      ctx.fill();
+    }
+
+    function loop() {
+      animationFrame = requestAnimationFrame(loop);
+      if (++count < (15 - speed)) return;
+      count = 0;
+
+      ctx.clearRect(0, 0, canvas.width, canvas.height);
+
+      snake.x += snake.dx;
+      snake.y += snake.dy;
+
+      if (snake.x < 0) snake.x = canvas.width - grid;
+      else if (snake.x >= canvas.width) snake.x = 0;
+      if (snake.y < 0) snake.y = canvas.height - grid;
+      else if (snake.y >= canvas.height) snake.y = 0;
+
+      snake.cells.unshift({ x: snake.x, y: snake.y });
+      if (snake.cells.length > snake.maxCells) snake.cells.pop();
+
+      drawDonut(donut.x, donut.y);
+
+      snake.cells.forEach((cell, index) => {
+        if (index === 0) {
+          drawSnakeHead(cell.x, cell.y);
+        } else {
+          ctx.fillStyle = snake.color;
+          ctx.fillRect(cell.x, cell.y, grid - 1, grid - 1);
+        }
+
+        if (cell.x === donut.x && cell.y === donut.y) {
+          snake.maxCells++;
+          score++;
+          donut.x = getRandomInt(0, 20) * grid;
+          donut.y = getRandomInt(0, 20) * grid;
+
+          if (score % 5 === 0) {
+            level++;
+            speed = Math.min(speed + 1, 14);
+            snake.color = colors[level % colors.length];
+          }
+
+          updateScore();
+        }
+
+        for (let i = index + 1; i < snake.cells.length; i++) {
+          if (cell.x === snake.cells[i].x && cell.y === snake.cells[i].y) {
+            cancelAnimationFrame(animationFrame);
+            gameOverMsg.style.display = 'block';
+            startBtn.style.display = 'inline-block';
+          }
+        }
+      });
+    }
+
+    function animateIntro(callback) {
+      let introX = 0;
+      const interval = setInterval(() => {
+        ctx.clearRect(0, 0, canvas.width, canvas.height);
+        drawSnakeHead(introX, canvas.height / 2 - grid / 2);
+        introX += 10;
+        if (introX > canvas.width) {
+          clearInterval(interval);
+          callback();
+        }
+      }, 30);
+    }
+
+    startBtn.addEventListener('click', () => {
+      startBtn.style.display = 'none';
+      resetGame();
+      animateIntro(() => {
+        requestAnimationFrame(loop);
+      });
+    });
+
+    document.addEventListener('keydown', e => {
+      if (e.which === 37 && snake.dx === 0) {
+        snake.dx = -grid;
+        snake.dy = 0;
+      } else if (e.which === 38 && snake.dy === 0) {
+        snake.dy = -grid;
+        snake.dx = 0;
+      } else if (e.which === 39 && snake.dx === 0) {
+        snake.dx = grid;
+        snake.dy = 0;
+      } else if (e.which === 40 && snake.dy === 0) {
+        snake.dy = grid;
+        snake.dx = 0;
       }
-    }
-  });
-}
+    });
 
-function animateIntro(callback) {
-  let introX = 0;
-  const interval = setInterval(() => {
-    ctx.clearRect(0, 0, canvas.width, canvas.height);
-    drawSnakeHead(introX, canvas.height / 2 - grid / 2);
-    introX += 10;
-    if (introX > canvas.width) {
-      clearInterval(interval);
-      callback();
-    }
-  }, 30);
-}
+    // Touch controls
+    let startX, startY;
+    canvas.addEventListener('touchstart', e => {
+      const touch = e.touches[0];
+      startX = touch.clientX;
+      startY = touch.clientY;
+    }, { passive: true });
 
-startBtn.addEventListener('click', () => {
-  startBtn.style.display = 'none';
-  resetGame();
-  animateIntro(() => {
-    requestAnimationFrame(loop);
-  });
-});
+    canvas.addEventListener('touchmove', e => {
+      if (!startX || !startY) return;
+      const touch = e.touches[0];
+      const diffX = touch.clientX - startX;
+      const diffY = touch.clientY - startY;
 
-document.addEventListener('keydown', e => {
-  if (e.which === 37 && snake.dx === 0) {
-    snake.dx = -grid;
-    snake.dy = 0;
-  } else if (e.which === 38 && snake.dy === 0) {
-    snake.dy = -grid;
-    snake.dx = 0;
-  } else if (e.which === 39 && snake.dx === 0) {
-    snake.dx = grid;
-    snake.dy = 0;
-  } else if (e.which === 40 && snake.dy === 0) {
-    snake.dy = grid;
-    snake.dx = 0;
-  }
-});
+      if (Math.abs(diffX) > Math.abs(diffY)) {
+        if (diffX > 0 && snake.dx === 0) {
+          snake.dx = grid;
+          snake.dy = 0;
+        } else if (diffX < 0 && snake.dx === 0) {
+          snake.dx = -grid;
+          snake.dy = 0;
+        }
+      } else {
+        if (diffY > 0 && snake.dy === 0) {
+          snake.dy = grid;
+          snake.dx = 0;
+        } else if (diffY < 0 && snake.dy === 0) {
+          snake.dy = -grid;
+          snake.dx = 0;
+        }
+      }
 
-let startX, startY;
-canvas.addEventListener('touchstart', e => {
-  const touch = e.touches[0];
-  startX = touch.clientX;
-  startY = touch.clientY;
-}, { passive: true });
+      startX = null;
+      startY = null;
+    }, { passive: true });
 
-canvas.addEventListener('touchmove', e => {
-  if (!startX || !startY) return;
-  const touch = e.touches[0];
-  const diffX = touch.clientX - startX;
-  const diffY = touch.clientY - startY;
-
-  if (Math.abs(diffX) > Math.abs(diffY)) {
-    if (diffX > 0 && snake.dx === 0) {
-      snake.dx = grid;
-      snake.dy = 0;
-    } else if (diffX < 0 && snake.dx === 0) {
-      snake.dx = -grid;
-      snake.dy = 0;
-    }
-  } else {
-    if (diffY > 0 && snake.dy === 0) {
-      snake.dy = grid;
-      snake.dx = 0;
-    } else if (diffY < 0 && snake.dy === 0) {
-      snake.dy = -grid;
-      snake.dx = 0;
-    }
-  }
-
-  startX = null;
-  startY = null;
-}, { passive: true });
-
-document.querySelectorAll('#mobileControls .arrow').forEach(button => {
-  button.addEventListener('click', () => {
-    const dir = button.getAttribute('data-dir');
-    if (dir === 'left' && snake.dx === 0) {
-      snake.dx = -grid;
-      snake.dy = 0;
-    } else if (dir === 'right' && snake.dx === 0) {
-      snake.dx = grid;
-      snake.dy = 0;
-    } else if (dir === 'up' && snake.dy === 0) {
-      snake.dy = -grid;
-      snake.dx = 0;
-    } else if (dir === 'down' && snake.dy === 0) {
-      snake.dy = grid;
-      snake.dx = 0;
-    }
-  });
-});
-</script>
+    document.querySelectorAll('#mobileControls .arrow').forEach(button => {
+      button.addEventListener('click', () => {
+        const dir = button.getAttribute('data-dir');
+        if (dir === 'left' && snake.dx === 0) {
+          snake.dx = -grid;
+          snake.dy = 0;
+        } else if (dir === 'right' && snake.dx === 0) {
+          snake.dx = grid;
+          snake.dy = 0;
+        } else if (dir === 'up' && snake.dy === 0) {
+          snake.dy = -grid;
+          snake.dx = 0;
+        } else if (dir === 'down' && snake.dy === 0) {
+          snake.dy = grid;
+          snake.dx = 0;
+        }
+      });
+    });
+  </script>
 </body>
 </html>
